--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,18 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <sourceDirectory>rpg/src/main/java</sourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                    <mainClass>rpg.Jogo.JogoRpg</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
